@@ -776,6 +776,13 @@
   (rect :pointer)
   (childrenp :int))
 
+(defcfun "g_idle_add"
+    :int
+  (fun :pointer)
+  ;; hack
+  ;; (data :pointer)
+  (data :long))
+
 (defconstant GDK_EXPOSURE_MASK             (ash 1 1))
 (defconstant GDK_POINTER_MOTION_MASK       (ash 1 2))
 (defconstant GDK_POINTER_MOTION_HINT_MASK  (ash 1 3))
