@@ -3,6 +3,7 @@
 ** backend improvements: Gtkairo
 *** Double buffering is now supported (fixes disappearing widgets on Windows).
 *** X errors no longer terminate the lisp process.
+*** Native implementation of context menus.
 
 * Changes in mcclim-0.9.3 "All Souls' Day" relative to 0.9.2:
 ** backend improvement: The Null backend now registers itself in the
